--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,7 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.google.android.gms:play-services-maps:10.2.0'
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
+    compile 'com.mcxiaoke.volley:library:1.0.19'
+
     testCompile 'junit:junit:4.12'
 }
