--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,11 +6,17 @@
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
          location permissions for the 'MyLocation' functionality.
+
+
+             <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+
     -->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
 
     <application
         android:allowBackup="true"
@@ -29,7 +35,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MarakeZ" />
         <activity android:name=".Tab1" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -73,7 +78,7 @@
             android:theme="@style/AppTheme" />
         <activity android:name=".ListeComments" />
         <activity android:name=".PageLiecence" />
-        <activity android:name=".OneFragment"></activity>
+        <activity android:name=".Taxassosexusus"/>
     </application>
 
 </manifest>
