--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,19 @@
 
 
              <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-
     -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <uses-feature android:name="android.hardware.location.gps" />
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -79,7 +83,8 @@
             android:theme="@style/AppTheme" />
         <activity android:name=".ListeComments" />
         <activity android:name=".PageLiecence" />
-        <activity android:name=".Taxassosexusus"/>
+        <activity android:name=".Taxassosexusus" />
+        <activity android:name=".ExplainMarkaz"></activity>
     </application>
 
 </manifest>
