--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     })
 
 
-
+    compile 'com.pkmmte.view:circularimageview:1.1'
     compile 'uk.co.chrisjenx:calligraphy:2.2.0'
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.android.support:design:25.1.1'
