--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-feature android:name="android.hardware.location.gps" />
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -33,6 +33,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
+            android:screenOrientation="portrait"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -55,16 +56,18 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".MapsActivity"
+            android:screenOrientation="portrait" android:name=".MapsActivity"
             android:label="@string/title_activity_maps" />
-        <activity android:name=".Pagemenu" />
-        <activity android:name=".PageMoshaverin" />
+        <activity android:screenOrientation="portrait" android:name=".Pagemenu" />
+        <activity android:screenOrientation="portrait" android:name=".PageMoshaverin" />
         <activity
             android:name=".ListeMoshaverin"
             android:label="@string/title_activity_liste_moshaverin"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
         <activity android:name=".PageMarakez" />
         <activity
+            android:screenOrientation="portrait"
             android:name=".ListeMarakez"
             android:label="@string/title_activity_liste_marakez"
             android:theme="@style/AppTheme" />
@@ -72,26 +75,28 @@
         <activity android:name=".ListeTaxassosHa" />
         <activity
             android:name=".ListePorseshha"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_liste_porseshha"
             android:theme="@style/AppTheme" />
-        <activity android:name=".PageAlaghemandiha" />
-        <activity android:name=".PasoxePorsesh" />
-        <activity android:name=".AddQuestion" />
-        <activity android:name=".PasoxBeSoal" />
+        <activity android:screenOrientation="portrait" android:name=".PageAlaghemandiha" />
+        <activity android:screenOrientation="portrait" android:name=".PasoxePorsesh" />
+        <activity android:screenOrientation="portrait" android:name=".AddQuestion" />
+        <activity android:screenOrientation="portrait" android:name=".PasoxBeSoal" />
         <activity
             android:name=".ExplainMoshaver"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_explain_moshaver"
             android:theme="@style/AppTheme" />
-        <activity android:name=".ListeComments" />
-        <activity android:name=".PageLiecence" />
-        <activity android:name=".Taxassosexusus" />
-        <activity android:name=".ExplainMarkaz" />
-        <activity android:name=".PageVirayesh" />
-        <activity android:name=".Liste_Moshaverine_Markaz" />
-        <activity android:name=".PageLogin" />
-        <activity android:name=".PageRezerv" />
-        <activity android:name=".PageLogout" />
-        <activity android:name=".ListeTaxassussss"></activity>
+        <activity android:screenOrientation="portrait" android:name=".ListeComments" />
+        <activity android:screenOrientation="portrait" android:name=".PageLiecence" />
+        <activity android:screenOrientation="portrait" android:name=".Taxassosexusus" />
+        <activity android:screenOrientation="portrait" android:name=".ExplainMarkaz" />
+        <activity android:screenOrientation="portrait" android:name=".PageVirayesh" />
+        <activity android:screenOrientation="portrait" android:name=".Liste_Moshaverine_Markaz" />
+        <activity android:screenOrientation="portrait" android:name=".PageLogin" />
+        <activity android:screenOrientation="portrait" android:name=".PageRezerv" />
+        <activity android:screenOrientation="portrait" android:name=".PageLogout" />
+        <activity android:screenOrientation="portrait" android:name=".ListeTaxassussss"/>
     </application>
 
 </manifest>
