--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <uses-feature android:name="android.hardware.location.gps" />
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -33,8 +34,8 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:screenOrientation="portrait"
             android:label="@string/app_name"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -56,10 +57,15 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:screenOrientation="portrait" android:name=".MapsActivity"
-            android:label="@string/title_activity_maps" />
-        <activity android:screenOrientation="portrait" android:name=".Pagemenu" />
-        <activity android:screenOrientation="portrait" android:name=".PageMoshaverin" />
+            android:name=".MapsActivity"
+            android:label="@string/title_activity_maps"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Pagemenu"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".PageMoshaverin"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ListeMoshaverin"
             android:label="@string/title_activity_liste_moshaverin"
@@ -67,36 +73,65 @@
             android:theme="@style/AppTheme" />
         <activity android:name=".PageMarakez" />
         <activity
-            android:screenOrientation="portrait"
             android:name=".ListeMarakez"
             android:label="@string/title_activity_liste_marakez"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
         <activity android:name=".PagePorseshha" />
         <activity android:name=".ListeTaxassosHa" />
         <activity
             android:name=".ListePorseshha"
-            android:screenOrientation="portrait"
             android:label="@string/title_activity_liste_porseshha"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
-        <activity android:screenOrientation="portrait" android:name=".PageAlaghemandiha" />
-        <activity android:screenOrientation="portrait" android:name=".PasoxePorsesh" />
-        <activity android:screenOrientation="portrait" android:name=".AddQuestion" />
-        <activity android:screenOrientation="portrait" android:name=".PasoxBeSoal" />
+        <activity
+            android:name=".PageAlaghemandiha"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".PasoxePorsesh"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".AddQuestion"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".PasoxBeSoal"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ExplainMoshaver"
-            android:screenOrientation="portrait"
             android:label="@string/title_activity_explain_moshaver"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
-        <activity android:screenOrientation="portrait" android:name=".ListeComments" />
-        <activity android:screenOrientation="portrait" android:name=".PageLiecence" />
-        <activity android:screenOrientation="portrait" android:name=".Taxassosexusus" />
-        <activity android:screenOrientation="portrait" android:name=".ExplainMarkaz" />
-        <activity android:screenOrientation="portrait" android:name=".PageVirayesh" />
-        <activity android:screenOrientation="portrait" android:name=".Liste_Moshaverine_Markaz" />
-        <activity android:screenOrientation="portrait" android:name=".PageLogin" />
-        <activity android:screenOrientation="portrait" android:name=".PageRezerv" />
-        <activity android:screenOrientation="portrait" android:name=".PageLogout" />
-        <activity android:screenOrientation="portrait" android:name=".ListeTaxassussss"/>
+        <activity
+            android:name=".ListeComments"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".PageLiecence"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Taxassosexusus"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ExplainMarkaz"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".PageVirayesh"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Liste_Moshaverine_Markaz"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".PageLogin"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".PageRezerv"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".PageLogout"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ListeTaxassussss"
+            android:screenOrientation="portrait" />
+        <activity android:name=".SichOlanTaxassus"></activity>
     </application>
 
 </manifest>
