--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -131,7 +131,7 @@
         <activity
             android:name=".ListeTaxassussss"
             android:screenOrientation="portrait" />
-        <activity android:name=".SichOlanTaxassus"></activity>
+        <activity android:name=".namhansiTaxassus"></activity>
     </application>
 
 </manifest>
