--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -106,7 +106,7 @@
             android:name=".ListeComments"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".PageLiecence"
+            android:name=".ListeLiecence"
             android:screenOrientation="portrait" />
         <activity
             android:name=".Taxassosexusus"
